style: fix horizontal scroll

--- a/src/components/SectionDivider/style.css
+++ b/src/components/SectionDivider/style.css
@@ -8,7 +8,7 @@
   display: flex;
   height: var(--navbar-height);
   justify-content: center;
-  width: 100vw;
+  width: 100%;
 }
 
 .divider-line {
